crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@259.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb_path_query('[]', 'strict $.double()', silent => true);"
---
SelectStmt@0..67
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..65
    FuncCall@7..65
      Ident@7..23 "jsonb_path_query"
      Ascii40@23..24 "("
      AConst@24..28
        Sconst@24..28 "'[]'"
      Ascii44@28..29 ","
      Whitespace@29..30 " "
      AConst@30..49
        Sconst@30..49 "'strict $.double()'"
      Ascii44@49..50 ","
      Whitespace@50..51 " "
      NamedArgExpr@51..65
        Ident@51..57 "silent"
        Whitespace@57..58 " "
        EqualsGreater@58..60 "=>"
        Whitespace@60..61 " "
        AConst@61..65
          TrueP@61..65 "true"
  Ascii41@65..66 ")"
  Ascii59@66..67 ";"

