crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@26.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb_path_query('[1]', 'strict $[10000000000000000]');"
---
SelectStmt@0..62
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..60
    FuncCall@7..60
      Ident@7..23 "jsonb_path_query"
      Ascii40@23..24 "("
      AConst@24..29
        Sconst@24..29 "'[1]'"
      Ascii44@29..30 ","
      Whitespace@30..31 " "
      AConst@31..60
        Sconst@31..60 "'strict $[10000000000 ..."
  Ascii41@60..61 ")"
  Ascii59@61..62 ";"

