crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@261.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb_path_query('1.23', '$.double()');"
---
SelectStmt@0..46
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..44
    FuncCall@7..44
      Ident@7..23 "jsonb_path_query"
      Ascii40@23..24 "("
      AConst@24..30
        Sconst@24..30 "'1.23'"
      Ascii44@30..31 ","
      Whitespace@31..32 " "
      AConst@32..44
        Sconst@32..44 "'$.double()'"
  Ascii41@44..45 ")"
  Ascii59@45..46 ";"

