crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@263.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb_path_query('\"1.23aaa\"', '$.double()');"
---
SelectStmt@0..51
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..49
    FuncCall@7..49
      Ident@7..23 "jsonb_path_query"
      Ascii40@23..24 "("
      AConst@24..35
        Sconst@24..35 "'\"1.23aaa\"'"
      Ascii44@35..36 ","
      Whitespace@36..37 " "
      AConst@37..49
        Sconst@37..49 "'$.double()'"
  Ascii41@49..50 ")"
  Ascii59@50..51 ";"

