crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@265.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb_path_query('\"nan\"', '$.double()');"
---
SelectStmt@0..47
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..45
    FuncCall@7..45
      Ident@7..23 "jsonb_path_query"
      Ascii40@23..24 "("
      AConst@24..31
        Sconst@24..31 "'\"nan\"'"
      Ascii44@31..32 ","
      Whitespace@32..33 " "
      AConst@33..45
        Sconst@33..45 "'$.double()'"
  Ascii41@45..46 ")"
  Ascii59@46..47 ";"

