crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@269.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb_path_query('\"inf\"', '$.double()', silent => true);"
---
SelectStmt@0..63
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..61
    FuncCall@7..61
      Ident@7..23 "jsonb_path_query"
      Ascii40@23..24 "("
      AConst@24..31
        Sconst@24..31 "'\"inf\"'"
      Ascii44@31..32 ","
      Whitespace@32..33 " "
      AConst@33..45
        Sconst@33..45 "'$.double()'"
      Ascii44@45..46 ","
      Whitespace@46..47 " "
      NamedArgExpr@47..61
        Ident@47..53 "silent"
        Whitespace@53..54 " "
        EqualsGreater@54..56 "=>"
        Whitespace@56..57 " "
        AConst@57..61
          TrueP@57..61 "true"
  Ascii41@61..62 ")"
  Ascii59@62..63 ";"

